fix:  mutability of the Lists created in toRoom